--- a/index.html
+++ b/index.html
@@ -61,6 +61,60 @@
             <use href="images/svg/sprite.svg#icon-button-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form>
+          <div class="form-box">
+            <label for="user-text" class="form-lebel">Имя</label>
+            <div class="input-text">
+              <input type="text" class="form-input" name="user-name" id="user-text" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="images/svg/sprite.svg#icon-person-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-box">
+            <label for="user-tel" class="form-lebel">Телефон</label>
+            <div class="input-text">
+              <input type="tel" class="form-input" name="user-tel" id="user-tel_text" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="images/svg/sprite.svg#icon-phone-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-box">
+            <label for="user-mail" class="form-lebel">Почта</label>
+            <div class="input-text">
+              <input type="mail" class="form-input" name="user-mail" id="user-mail_text;" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="images/svg/sprite.svg#icon-mail-form"></use>
+              </svg>
+            </div>
+          </div>
+          <label for="user-comment" class="form-lebel">Комментарий</label>
+          <textarea
+            name="user-comment"
+            id="user-comment"
+            class="form-coment"
+            placeholder="Введите текст"
+          ></textarea>
+          <div class="form-agree">
+            <input
+              type="checkbox"
+              name="input-check"
+              id="input-check"
+              class="policy-check visually-hidden"
+            />
+            <label for="policy" class="check-text">
+              <span>
+                <svg class="policy-icon" width="16" height="15">
+                  <use href="images/svg/sprite.svg#icon-icon-check"></use>
+                </svg>
+              </span>
+              Соглашаюсь с рассылкой и принимаю
+              <a href="" class="terms-agree">Условия договора</a>
+            </label>
+          </div>
+        </form>
       </div>
     </div>
     <!--шапка-->
