--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
           ></textarea>
           <label class="modal-checkbox">
             <svg class="checkbox-icon">
-                <use href="images/svg/sprite.svg#icon-icon-check"></use>
+              <use href="images/svg/sprite.svg#icon-icon-check"></use>
             </svg>
-            <input class= "checkbox-input" type="checkbox" name="agree" value="agree">Соглашаюсь с рассылкой и принимаю <a href="#" download><u>Условия договора</u></a>
-        </label>
-        <button type="submit" class="modal-button">Отправить</button>
+            <input class="checkbox-input" type="checkbox" name="agree" value="agree" />Соглашаюсь с
+            рассылкой и принимаю <a href="#" download><u>Условия договора</u></a>
+          </label>
+          <button type="submit" class="modal-button">Отправить</button>
         </form>
       </div>
     </div>
@@ -469,6 +470,17 @@
             </li>
           </ul>
         </div>
+        <form class="mail-form">
+          <p class="footer-sub">Подпишитесь на рассылку</p>
+          <label for="mail"></label>
+          <input type="mail" name="mail" id="mail" placeholder="E-mail" class="mail-input" />
+          <button type="submit" class="mail-button">
+            Подписаться
+            <svg class="mail-send" width="24" height="24">
+              <use href="images/svg/sprite.svg#icon-icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
     <script src="js/modal.js"></script>
