--- a/portfolio.html
+++ b/portfolio.html
@@ -253,6 +253,17 @@
             </li>
           </ul>
         </div>
+        <div class="mail-form">
+          <p class="footer-sub">Подпишитесь на рассылку</p>
+          <label for="mail"></label>
+          <input type="mail" name="mail" id="mail" placeholder="E-mail" class="mail-input" />
+          <button type="submit" class="mail-button">
+            Подписаться
+            <svg class="mail-send" width="24" height="24">
+              <use href="images/svg/sprite.svg#icon-icon-send"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
   </body>
